cla program improved